--- a/src/App.css
+++ b/src/App.css
@@ -283,4 +283,27 @@ body {
   }
 }
 
+.cleanup-select {
+  padding: 0.5rem;
+  border-radius: 0.375rem;
+  border: 1px solid #e2e8f0;
+  background-color: #fff;
+  color: #1a202c;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  margin: 0 0.5rem;
+  min-width: 200px;
+}
+
+.cleanup-select:disabled {
+  background-color: #f7fafc;
+  cursor: not-allowed;
+}
+
+.cleanup-select:focus {
+  outline: none;
+  border-color: #4299e1;
+  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+}
+
 
